@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.82 2009-12-23 22:28:09 martin Exp $
+# $Id: CHANGES,v 1.993.2.83 2009-12-23 22:56:45 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.4.6 (2009/??/??)
+ - (2009/12/23) Fixed bug#3526 - Escalation emails are resent over and over again.
  - (2009/12/23) Fixed bug#4428 - PGP-inline signed messages can't be encoded
     correctly with rich text editor.
  - (2009/12/22) Fixed bug#4690 - AdminMailAccount - only 50 characters can be
